-
Bug
-
Resolution: Fixed
-
P2: Important
-
Qt Creator 16.0.2, Qt Creator 17.0.0
-
None
-
11c824c41 (master)
Enable some kits (more than 1) for a project and choose "Build > Build (All Projects | Project "X") for All Configurations"
I get the error
14:37:43: Configuration is faulty. Check the Issues view for details. 14:37:43: Error while building/deploying project cmake_qml (kit: Qt 6.7.3 for macOS) 14:37:43: When executing step "CMake Build"
The Issues view says ":-1: error: The build configuration is currently disabled."