CMakePM: Allow building for all configurations

Previously only the active build configuration would be built.

Now the parsing of build configurations will be done before doing the
build step, and thus have a build step that doesn't need to have a check
for isEnabled().

Fixes: QTCREATORBUG-33178
Change-Id: I618c0eec09baefcfb22979c5c40c02a436bd6401
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>